# Ghost-Downloader-3

./: .fork-sync-log.md  .gitignore  CLAUDE.md  README.md  README_zh.md  deploy.py  pyproject.toml
.github/workflows/: build-engine.yml  build.yml
app/bases/: interfaces.py  models.py
app/services/: core_service.py  feature_service.py  task_service.py
app/supports/: config.py  engine.py  update.py
app/view/components/: add_task_dialog.py
app/view/pages/: setting_page.py
app/view/windows/: main_window.py
features/ftp_pack/: cards.py
features/http_pack/: pack.py  rust_worker.py  task.py
gd3-engine/: .gitignore  Cargo.toml  pyproject.toml
gd3-engine/python/gd3_engine/: __init__.py
gd3-engine/src/: config.rs  connection.rs  engine.rs  error.rs  lib.rs  probe.rs  progress.rs  resume.rs  scheduler.rs  speed_limit.rs  writer.rs
